--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="Prop.jpg" class="d-block w-100" alt="Property">
+          <img src="Images/Prop.jpg" class="d-block w-100" alt="Property">
           <div class="carousel-caption d-none d-md-block">
             <h5>Luxury Property</h5>
             <p>Premium property solutions with modern elegance.</p>
