--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="blog.jpg" class="d-block w-100" alt="Business">
+          <img src="Images/blog.jpg" class="d-block w-100" alt="Business">
           <div class="carousel-caption d-none d-md-block">
             <h5>Business Blog</h5>
             <p>Insights that empower your business decisions.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="Cars.jpg" class="d-block w-100" alt="Luxury Cars">
+          <img src="Images/Cars.jpg" class="d-block w-100" alt="Luxury Cars">
           <div class="carousel-caption d-none d-md-block">
             <h5>Premium Cars</h5>
             <p>Drive the luxury you deserve.</p>
@@ -73,7 +73,7 @@
     <!-- Card 1: Business Strategy -->
     <div class="col-md-4">
       <div class="card h-100 bg-dark text-light border-secondary">
-        <img src="blogg.jpg" class="card-img-top" alt="Business Strategy" style="height: 200px; object-fit: cover;">
+        <img src="Images/blogg.jpg" class="card-img-top" alt="Business Strategy" style="height: 200px; object-fit: cover;">
         <div class="card-body">
           <h5 class="card-title">Business Strategy</h5>
           <p class="card-text">We help you scale your business through strategic planning, marketing, and digital transformation tailored for success.</p>
@@ -84,7 +84,7 @@
     <!-- Card 2: Property Solutions -->
     <div class="col-md-4">
       <div class="card h-100 bg-dark text-light border-secondary">
-        <img src="house.jpg" class="card-img-top" alt="Property Management" style="height: 200px; object-fit: cover;">
+        <img src="Images/house.jpg" class="card-img-top" alt="Property Management" style="height: 200px; object-fit: cover;">
         <div class="card-body">
           <h5 class="card-title">Property Management</h5>
           <p class="card-text">From luxury estates to commercial real estate, our team ensures the best deals and seamless transactions.</p>
@@ -95,7 +95,7 @@
     <!-- Card 3: Luxury Car Rentals -->
     <div class="col-md-4">
       <div class="card h-100 bg-dark text-light border-secondary">
-        <img src="car.jpg" class="card-img-top" alt="Luxury Cars" style="height: 200px; object-fit: cover;">
+        <img src="Images/car.jpg" class="card-img-top" alt="Luxury Cars" style="height: 200px; object-fit: cover;">
         <div class="card-body">
           <h5 class="card-title">Luxury Car Rentals</h5>
           <p class="card-text">Drive in style with our fleet of premium vehicles. Available for business, events, or luxury travel.</p>
