--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
     <div class="card mb-4 bg-dark text-light border-secondary">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="team.jpg" class="img-fluid rounded-start" alt="Team" style="height: 100%; object-fit: cover;">
+          <img src="Images/team.jpg" class="img-fluid rounded-start" alt="Team" style="height: 100%; object-fit: cover;">
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -105,7 +105,7 @@
     <div class="card mb-4 bg-dark text-light border-secondary">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="future.jpg" class="img-fluid rounded-start" alt="Future" style="height: 100%; object-fit: cover;">
+          <img src="Images/future.jpg" class="img-fluid rounded-start" alt="Future" style="height: 100%; object-fit: cover;">
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -125,7 +125,7 @@
   <!-- Blog A -->
   <div class="row align-items-center mb-5">
     <div class="col-md-6">
-      <img src="focus.jpg" class="img-fluid rounded-4 shadow" alt="Client Focused" style="object-fit: cover; width: 100%; height: 100%;">
+      <img src="Images/focus.jpg" class="img-fluid rounded-4 shadow" alt="Client Focused" style="object-fit: cover; width: 100%; height: 100%;">
     </div>
     <div class="col-md-6 ps-md-4 mt-4 mt-md-0">
       <h4>Client-First Approach</h4>
@@ -138,7 +138,7 @@
   <!-- Blog B -->
   <div class="row align-items-center mb-5 flex-md-row-reverse">
     <div class="col-md-6">
-      <img src="green.avif" class="img-fluid rounded-4 shadow" alt="Green Business" style="object-fit: cover; width: 100%; height: 100%;">
+      <img src="Images/green.avif" class="img-fluid rounded-4 shadow" alt="Green Business" style="object-fit: cover; width: 100%; height: 100%;">
     </div>
     <div class="col-md-6 pe-md-4 mt-4 mt-md-0">
       <h4>Green Business Matters</h4>
@@ -150,8 +150,8 @@
 
   <!-- Blog C -->
   <div class="row align-items-center mb-5">
-    <div class="col-md-6">
-      <img src="innovation.webp" class="img-fluid rounded-4 shadow" alt="Innovation" style="object-fit: cover; width: 100%; height: 100%;">
+    <div class="col-qmd-6">
+      <img src="Images/innovation.webp" class="img-fluid rounded-4 shadow" alt="Innovation" style="object-fit: cover; width: 100%; height: 100%;">
     </div>
     <div class="col-md-6 ps-md-4 mt-4 mt-md-0">
       <h4>Driven by Innovation</h4>
@@ -166,7 +166,7 @@
 <section class="container my-5">
   <div class="row align-items-center">
     <div class="col-md-6">
-      <img src="insight.webp" class="img-fluid rounded-4 shadow" alt="Taiga Business Insight" style="object-fit: cover; width: 100%; height: 100%;">
+      <img src="Images/insight.webp" class="img-fluid rounded-4 shadow" alt="Taiga Business Insight" style="object-fit: cover; width: 100%; height: 100%;">
     </div>
     <div class="col-md-6 mt-4 mt-md-0">
       <h3 class="text-warning">The Taiga Difference</h3>
