--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
     <div class="row g-4 mb-5">
       <div class="col-md-4">
         <div class="card bg-dark text-light border-secondary h-100">
-          <img src="real 1.png" class="card-img-top" alt="Buy Property">
+          <img src="Images/real 1.png" class="card-img-top" alt="Buy Property">
           <div class="card-body">
             <h5 class="card-title">Buy Premium Properties</h5>
             <p class="card-text">Access luxury homes, commercial spaces, and investments tailored to your needs.</p>
@@ -42,7 +42,7 @@
       </div>
       <div class="col-md-4">
         <div class="card bg-dark text-light border-secondary h-100">
-          <img src="real 2.png" class="card-img-top" alt="Rent Property">
+          <img src="Images/real 2.png" class="card-img-top" alt="Rent Property">
           <div class="card-body">
             <h5 class="card-title">Rent with Confidence</h5>
             <p class="card-text">Find secure and stylish rental properties in prime locations effortlessly.</p>
@@ -51,7 +51,7 @@
       </div>
       <div class="col-md-4">
         <div class="card bg-dark text-light border-secondary h-100">
-          <img src="real.png" class="card-img-top" alt="Sell Property">
+          <img src="Images/real.png" class="card-img-top" alt="Sell Property">
           <div class="card-body">
             <h5 class="card-title">Sell Smart & Fast</h5>
             <p class="card-text">Get the best market value with our expert property selling strategies.</p>
@@ -67,7 +67,7 @@
         <div class="card h-100 text-light bg-transparent border-light border-1">
           <div class="row g-0">
             <div class="col-4">
-              <img src="auto1.jpg" class="img-fluid rounded-start" alt="Luxury Car Rental">
+              <img src="Images/auto1.jpg" class="img-fluid rounded-start" alt="Luxury Car Rental">
             </div>
             <div class="col-8">
               <div class="card-body">
@@ -82,7 +82,7 @@
         <div class="card h-100 text-light bg-transparent border-light border-1">
           <div class="row g-0">
             <div class="col-4">
-              <img src="auto2.jpg" class="img-fluid rounded-start" alt="Chauffeur Service">
+              <img src="Images/auto2.jpg" class="img-fluid rounded-start" alt="Chauffeur Service">
             </div>
             <div class="col-8">
               <div class="card-body">
@@ -97,7 +97,7 @@
         <div class="card h-100 text-light bg-transparent border-light border-1">
           <div class="row g-0">
             <div class="col-4">
-              <img src="auto3.jpg" class="img-fluid rounded-start" alt="Fleet Leasing">
+              <img src="Images/auto3.jpg" class="img-fluid rounded-start" alt="Fleet Leasing">
             </div>
             <div class="col-8">
               <div class="card-body">
@@ -117,7 +117,7 @@
         <div class="card bg-secondary text-dark h-100">
           <div class="card-body">
             <h5 class="card-title">Property Advisory</h5>
-            <img src="support.webp" class="img-fluid rounded mt-3 mb-3" alt="Advisory">
+            <img src="Images/support.webp" class="img-fluid rounded mt-3 mb-3" alt="Advisory">
             <p class="card-text">Get expert advice on buying, investing, and portfolio diversification in real estate.
               Taiga Business offers comprehensive property advisory services designed to assist clients in making
               informed real estate decisions. Their expert team provides strategic guidance on property investments,
@@ -134,7 +134,7 @@
         <div class="card bg-secondary text-dark h-100">
           <div class="card-body">
             <h5 class="card-title">Automotive Planning</h5>
-            <img src="support1.avif" class="img-fluid rounded mt-3 mb-3" alt="Planning">
+            <img src="Images/support1.avif" class="img-fluid rounded mt-3 mb-3" alt="Planning">
             <p class="card-text">Plan your vehicle needs smartly — from personal luxury to enterprise transport.</p>
           </div>
         </div>
@@ -143,7 +143,7 @@
         <div class="card bg-secondary text-dark h-100">
           <div class="card-body">
             <h5 class="card-title">Customer Support</h5>
-            <img src="support2.avif" class="img-fluid rounded mt-3 mb-3" alt="Support">
+            <img src="Images/support2.avif" class="img-fluid rounded mt-3 mb-3" alt="Support">
             <p class="card-text">Our 24/7 customer service ensures a smooth experience from inquiry to delivery. Taiga
               Business provides dedicated customer support to ensure client satisfaction and seamless service. Their
               support team offers prompt assistance with inquiries, technical issues, and account management,
