--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gallery - Taiga Business</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="Images/favicon.ico" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .gallery-img {
@@ -59,19 +59,19 @@
       <h2 class="section-title text-center">🏠 Property Gallery</h2>
       <div class="row g-4">
         <div class="col-md-4">
-          <div class="gallery-img"><img src="h1.avif" alt="Luxury House" class="img-fluid"></div>
+          <div class="gallery-img"><img src="Images/h1.avif" alt="Luxury House" class="img-fluid"></div>
         </div>
         <div class="col-md-4">
-          <div class="gallery-img"><img src="h2.webp" alt="Modern Villa" class="img-fluid"></div>
+          <div class="gallery-img"><img src="Images/h2.webp" alt="Modern Villa" class="img-fluid"></div>
         </div>
         <div class="col-md-4">
-          <div class="gallery-img"><img src="h3.avif" alt="Elegant Apartment" class="img-fluid"></div>
+          <div class="gallery-img"><img src="Images/h3.avif" alt="Elegant Apartment" class="img-fluid"></div>
         </div>
         <div class="col-md-6">
-          <div class="gallery-img"><img src="h4.avif" alt="High-Rise View" class="img-fluid"></div>
+          <div class="gallery-img"><img src="Images/h4.avif" alt="High-Rise View" class="img-fluid"></div>
         </div>
         <div class="col-md-6">
-          <div class="gallery-img"><img src="h5.avif" alt="Interior Living Room" class="img-fluid"></div>
+          <div class="gallery-img"><img src="Images/h5.avif" alt="Interior Living Room" class="img-fluid"></div>
         </div>
       </div>
     </section>
@@ -81,22 +81,22 @@
       <h2 class="section-title text-center">🚘 Automotive Gallery</h2>
       <div class="row g-4">
         <div class="col-md-3">
-          <div class="gallery-img"><img src="c6.avif" alt="Sports Car" class="img-fluid"></div>
+          <div class="gallery-img"><img src="Images/c6.avif" alt="Sports Car" class="img-fluid"></div>
         </div>
         <div class="col-md-3">
-          <div class="gallery-img"><img src="c3.avif" alt="SUV" class="img-fluid"></div>
+          <div class="gallery-img"><img src="Images/c3.avif" alt="SUV" class="img-fluid"></div>
         </div>
         <div class="col-md-3">
-          <div class="gallery-img"><img src="c4.avif" alt="Luxury Sedan" class="img-fluid"></div>
+          <div class="gallery-img"><img src="Images/c4.avif" alt="Luxury Sedan" class="img-fluid"></div>
         </div>
         <div class="col-md-3">
-          <div class="gallery-img"><img src="c1.avif" alt="Fleet Vehicles" class="img-fluid"></div>
+          <div class="gallery-img"><img src="Images/c1.avif" alt="Fleet Vehicles" class="img-fluid"></div>
         </div>
         <div class="col-md-6">
-          <div class="gallery-img"><img src="c5.avif" alt="Interior Dashboard" class="img-fluid"></div>
+          <div class="gallery-img"><img src="Images/c5.avif" alt="Interior Dashboard" class="img-fluid"></div>
         </div>
         <div class="col-md-6">
-          <div class="gallery-img"><img src="c2.avif" alt="Chauffeur Service" class="img-fluid"></div>
+          <div class="gallery-img"><img src="Images/c2.avif" alt="Chauffeur Service" class="img-fluid"></div>
         </div>
       </div>
     </section>
