--- a/faq.html
+++ b/faq.html
@@ -34,8 +34,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="services.html">Services</a></li>
-<!--         <li><a href="gallery.html">Gallery</a></li>
-         -->
+       <li><a href="gallery.html">Gallery</a></li>
+         
         <li><a href="faq.html" class="active">FAQs</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
