--- a/services.html
+++ b/services.html
@@ -18,8 +18,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="services.html" class="active">Services</a></li>
-<!--         <li><a href="gallery.html">Gallery</a></li>
-         -->
+       <li><a href="gallery.html">Gallery</a></li>
+         
         <li><a href="faq.html">FAQs</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
